package com.mouse.profiler.utils;

import com.mouse.profiler.dto.QueryCriteria;
import com.mouse.profiler.entity.Profile;
import org.springframework.data.jpa.domain.Specification;

/**
 * Utility class to build dynamic JPA Specifications for the Profile entity.
 * * Logic: Construct complex AND/OR predicates based on which filters are
 * present in the QueryCriteria object to avoid full-table scans.
 */
public class ProfileSpecification {

    /**
     * Generates a combined Specification based on the provided criteria.
     * * @param criteria The structured filters (gender, age_group, probabilities, etc.)
     * @return A Specification object to be used with ProfileRepository.
     */
    public static Specification<Profile> build(QueryCriteria criteria) {
        return (root, query, criteriaBuilder) -> {
            // TODO: Create a List<Predicate>
            // TODO: Add predicate for gender (if not null)
            // TODO: Add predicate for age_group (if not null)
            // TODO: Add range predicates for min_age and max_age
            // TODO: Add GreaterThanOrEqualTo predicates for confidence probabilities
            // TODO: Combine all predicates using criteriaBuilder.and()
            return null;
        };
    }
}
